--- a/.cloudbuild/pr.yaml
+++ b/.cloudbuild/pr.yaml
@@ -1,7 +1,8 @@
 steps:
   - id: redpanda
     name: 'vectorized/redpanda:latest'
-    args: [ 'start',  '--overprovisioned', '--smp 1 ',  '--memory 1G', '--reserve-memory 0M', '--node-id 0',  '--check=false' ]
+    args: [ 'redpanda', 'start',  '--overprovisioned', '--smp 1 ',  '--memory 1G', '--reserve-memory 0M', '--node-id 0',  '--check=false' ]
+    entryPoint: /usr/bin/rpk
   - id: mosquitto
     name: 'eclipse-mosquitto:2'
   - id: build
