--- a/.cloudbuild/docker-compose.yaml
+++ b/.cloudbuild/docker-compose.yaml
@@ -26,3 +26,5 @@ services:
     image: eclipse-mosquitto
     ports:
       - 1883:1883
+    volumes:
+      - ./.cloudbuild/mosquitto.conf:/mosquitto/config/mosquitto.conf
