--- a/.cloudbuild/docker-compose.yaml
+++ b/.cloudbuild/docker-compose.yaml
@@ -27,4 +27,4 @@ services:
     ports:
       - 1883:1883
     volumes:
-      - ./.cloudbuild/mosquitto.conf:/mosquitto/config/mosquitto.conf
+      - ./mosquitto.conf:/mosquitto/config/mosquitto.conf
