--- a/.cloudbuild/Dockerfile-ci.yaml
+++ b/.cloudbuild/Dockerfile-ci.yaml
@@ -10,7 +10,7 @@ RUN wget https://github.com/vectorizedio/redpanda/releases/download/v21.5.2/rpk-
     && mv rpk /usr/local/bin
 RUN  go install github.com/pingcap/failpoint/failpoint-ctl@latest \
     && /go/bin/failpoint-ctl enable \
-    && PATH=$PATH:/go/bin go test ./... \
+    && go test ./... \
     && /go/bin/failpoint-ctl disable
 RUN go build  -o /out/metamorphosis cmd/main.go
 FROM alpine AS base
