--- a/.cloudbuild/docker-compose.yaml
+++ b/.cloudbuild/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
       - --kafka-addr
       - PLAINTEXT://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
       - --advertise-kafka-addr
-      - PLAINTEXT://redpanda:29092,OUTSIDE://localhost:9092
+      - PLAINTEXT://redpanda:29092,OUTSIDE://0.0.0.0:9092
     # NOTE: Please use the latest version here!
     image: vectorized/redpanda:v21.4.13
     container_name: redpanda-1
