--- a/.cloudbuild/pr.yaml
+++ b/.cloudbuild/pr.yaml
@@ -2,9 +2,13 @@ steps:
   - id: docker-compose
     name: 'docker/compose:1.19.0'
     args: ['-f', '.cloudbuild/docker-compose.yaml', 'up', '-d']
+  - id: test
+    name: golang
+    args: ['go', 'test', './...']
+    waitFor: [docker-compose]
   - id: build
     name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '--tag=eu.gcr.io/${PROJECT_ID}/${REPO_NAME}:${BRANCH_NAME}-${SHORT_SHA}', '-f', '.cloudbuild/Dockerfile-ci.yaml', '.' ]
-    waitFor: [docker-compose]
+    args: [ 'build', '--tag=eu.gcr.io/${PROJECT_ID}/${REPO_NAME}:${TAG_NAME}', '.' ]
+    waitFor: [test]
 
 images: [ 'eu.gcr.io/${PROJECT_ID}/${REPO_NAME}:${BRANCH_NAME}-${SHORT_SHA}' ]
