--- a/.cloudbuild/docker-compose.yaml
+++ b/.cloudbuild/docker-compose.yaml
@@ -13,9 +13,9 @@ services:
       - --node-id
       - '0'
       - --kafka-addr
-      - 0.0.0.0:9092
+      - PLAINTEXT://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
       - --advertise-kafka-addr
-      - 127.0.0.1:9092
+      - PLAINTEXT://redpanda:29092,OUTSIDE://localhost:9092
     image: vectorized/redpanda:v21.4.13
     container_name: redpanda-1
     ports:
