--- a/.cloudbuild/docker-compose.yaml
+++ b/.cloudbuild/docker-compose.yaml
@@ -1,6 +1,8 @@
 version: '3.3'
 services:
   redpanda:
+    networks:
+      - cloudbuild
     entrypoint:
       - /usr/bin/rpk
       - redpanda
@@ -13,16 +15,18 @@ services:
       - --node-id
       - '0'
       - --kafka-addr
-      - PLAINTEXT://0.0.0.0:29092,OUTSIDE://0.0.0.0:9092
+      - 0.0.0.0:9092
       - --advertise-kafka-addr
-      - PLAINTEXT://localhost:29092,OUTSIDE://localhost:9092
+      - 127.0.0.1:9092
     image: vectorized/redpanda:v21.4.13
-    container_name: redpanda-1
+    container_name: redpanda
     ports:
       - 9092:9092
-      - 29092:29092
   mosquitto:
+    networks:
+      - cloudbuild
     image: eclipse-mosquitto
+    container_name: mosquitto
     ports:
       - 1883:1883
     volumes:
