--- a/.cloudbuild/tag.yaml
+++ b/.cloudbuild/tag.yaml
@@ -1,5 +1,5 @@
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '--tag=eu.gcr.io/${PROJECT_ID}/${REPO_NAME}:${TAG_NAME}', '.' ]
+    args: [ 'build', '--tag=eu.gcr.io/${_TARGET_PROJECT_ID}/${REPO_NAME}:${TAG_NAME}', '.' ]
 
-images: ['eu.gcr.io/${PROJECT_ID}/${REPO_NAME}:${TAG_NAME}']
+images: ['eu.gcr.io/${_TARGET_PROJECT_ID}/${REPO_NAME}:${TAG_NAME}']
