feat: Moving build to point to Artifact registry.

--- a/.cloudbuild/pr.yaml
+++ b/.cloudbuild/pr.yaml
@@ -3,6 +3,6 @@ substitutions:
 
 steps:
   - name: 'gcr.io/cloud-builders/docker'
-    args: [ 'build', '--tag=eu.gcr.io/${_TARGET_PROJECT_ID}/${REPO_NAME}:${_BRANCH_NAME}-${SHORT_SHA}', '.' ]
+    args: [ 'build', '--tag=${_ARTIFACT_REGISTRY_DOMAIN}/${_TARGET_PROJECT_ID}/${_NIMBUS_DOCKER_ARTIFACTS}/${REPO_NAME}:${_BRANCH_NAME}-${SHORT_SHA}', '.' ]
 
-images: ['eu.gcr.io/${_TARGET_PROJECT_ID}/${REPO_NAME}:${_BRANCH_NAME}-${SHORT_SHA}']
+images: ['${_ARTIFACT_REGISTRY_DOMAIN}/${_TARGET_PROJECT_ID}/${_NIMBUS_DOCKER_ARTIFACTS}/${REPO_NAME}:${_BRANCH_NAME}-${SHORT_SHA}']
